force-app/main/default/objects/User/fields/vlocity_cmt__OMplusSyncEnabled__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OMplusSyncEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable OM+ sync for this user</description>
    <inlineHelpText>If checked a user will be marked for export to OMplus platform. User will be enabled in OMplus once catalog synchronisation job is complete in Vlocity XOM Administration tab.</inlineHelpText>
    <label>OM Plus Enabled</label>
    <type>Checkbox</type>
</CustomField>