force-app/main/default/objects/User/fields/vlocity_cmt__StoreAssociateStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StoreAssociateStatus__c</fullName>
    <label>Store Associate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clocked In</fullName>
            </value>
            <value>
                <fullName>Clocked Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>